Update and rename Intruder.html to Attacker.html

--- a/CSRF_Synchronizer_Token_Pattern-master/WebContent/Attacker.html
+++ b/CSRF_Synchronizer_Token_Pattern-master/WebContent/Attacker.html
@@ -7,9 +7,9 @@
 <body>
 
 <form name="myForm" action="HomeServlet" method="post">
-<h2>You won Audi S5!!!</h2>
+<h2>You won 1000$!!!</h2>
 <br/>
-<p>Please enter your name and email to transfer $1000 to charity</p>
+<p>Enter your name and email to get 1000$</p>
 <br/>
 name : <input type="text" name="name"/>
 email : <input type="text" name="email"/>
